US11_Mohamed done

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,4 @@
-URL=http://qa3.trycloud.net/index.php/login?clear=1
+URL=http://qa3.trycloud.net/
 browser=chrome
+Username = user22
+password = Userpass123
